# jobreporter

./: .dockerignore  .gitignore  BUILD  CODEOWNERS  Dockerfile  README.md  WORKSPACE  buf.gen.yaml  go.mod  go.sum  repositories.bzl  tools.go
api/proto/: buf.yaml
api/proto/jobreporter/v1/: BUILD.bazel  jobreporter.proto
cmd/jobreporter/: BUILD  BUILD.bazel  main.go
internal/log/: BUILD.bazel
