load("@rules_proto//proto:defs.bzl", "proto_library")
load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

proto_library(
    name = "pb_proto",
    srcs = ["jobreporter.proto"],
    visibility = ["//visibility:public"],
    deps = [
        "//protoc-gen-openapiv2/options:options_proto",
        "//validate:validate_proto",
        "@com_google_protobuf//:empty_proto",
        "@com_google_protobuf//:timestamp_proto",
        "@com_google_protobuf//:wrappers_proto",
        "@go_googleapis//google/api:annotations_proto",
    ],
)

go_proto_library(
    name = "pb_go_proto",
    compilers = ["@io_bazel_rules_go//proto:go_grpc"],
    importpath = "github.com/wnshu0410/jobreporter/internal/pkg/pb",
    proto = ":pb_proto",
    visibility = ["//:__subpackages__"],
    deps = [
        "//protoc-gen-openapiv2/options:annotations_proto",
        "//validate:validate_proto",
        "@go_googleapis//google/api:annotations_go_proto",
    ],
)

go_library(
    name = "pb",
    embed = [":pb_go_proto"],
    importpath = "github.com/wnshu0410/jobreporter/internal/pkg/pb",
    visibility = ["//:__subpackages__"],
)
